--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -126,7 +126,7 @@
                             android:id="@+id/feed"
                             android:layout_height="wrap_content"
                             android:background="@drawable/rounded_border"
-                            android:padding="10dp"
+                            android:padding="15dp"
                             android:layout_marginRight="10dp"
                             android:clickable="true"
                             android:layout_weight="1">
@@ -134,7 +134,7 @@
                             <ImageView
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
-                                android:src="@drawable/search"/>
+                                android:src="@drawable/fb"/>
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -157,8 +157,8 @@
                             android:layout_weight="1">
 
                             <ImageView
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
                                 android:src="@drawable/message"/>
 
                             <TextView
@@ -173,66 +173,6 @@
 
                         </LinearLayout>
                     </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="10dp"
-                        android:weightSum="2">
-                        <LinearLayout
-                            android:id="@+id/friends"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:padding="10dp"
-                            android:layout_marginRight="10dp"
-                            android:background="@drawable/rounded_border"
-                            android:clickable="true"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:src="@drawable/friends"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="10dp"
-                                android:textSize="15dp"
-                                android:textStyle="bold"
-                                android:text="Friends"/>
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/search"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:padding="10dp"
-                            android:background="@drawable/rounded_border"
-                            android:clickable="true"
-                            android:layout_weight="1">
-
-                            <ImageView
-                                android:layout_width="40dp"
-                                android:layout_height="40dp"
-                                android:src="@drawable/search"/>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="10dp"
-                                android:textSize="15dp"
-                                android:textStyle="bold"
-                                android:text="Search"/>
-
-
-                        </LinearLayout>
-                    </LinearLayout>
-
 
                 </LinearLayout>
 
@@ -305,7 +245,19 @@
                         android:paddingBottom="10dp"
                         android:layout_height="wrap_content"/>
 
+
                 </LinearLayout>
+
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    ads:adSize="SMART_BANNER"
+                    android:visibility="visible"
+                    ads:adUnitId="ca-app-pub-5550326882103592/7492881365">
+                </com.google.android.gms.ads.AdView>
 
                 <LinearLayout
                     android:id="@+id/segment_two"
@@ -366,12 +318,34 @@
 
                 </LinearLayout>
 
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    ads:adSize="SMART_BANNER"
+                    android:visibility="visible"
+                    ads:adUnitId="ca-app-pub-5550326882103592/8223509102">
+                </com.google.android.gms.ads.AdView>
+
             </LinearLayout>
 
 
         </androidx.core.widget.NestedScrollView>
 
 <!--        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>-->
+
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/bottomAd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="SMART_BANNER"
+            ads:adUnitId="ca-app-pub-5550326882103592/8838850108">
+        </com.google.android.gms.ads.AdView>
 
     </RelativeLayout>
 
