--- a/app/src/main/res/layout/item_social_app.xml
+++ b/app/src/main/res/layout/item_social_app.xml
@@ -9,21 +9,26 @@
     <ImageView
         android:id="@+id/app_icon"
         android:layout_width="50dp"
+        android:layout_gravity="center_horizontal"
         android:layout_height="50dp"/>
 
     <TextView
         android:id="@+id/app_display_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="10dp"
+        android:textSize="12dp"
         android:layout_marginTop="3dp"
-        android:textColor="@color/colorPrimaryDark"/>
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"/>
 
     <TextView
         android:id="@+id/use_count"
         android:layout_width="wrap_content"
         android:textSize="10dp"
         android:layout_marginTop="2dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"/>
 
     <TextView
@@ -31,6 +36,8 @@
         android:layout_width="wrap_content"
         android:textSize="10dp"
         android:layout_marginTop="2dp"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"/>
 
 
