changes for new release

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.AboutActivity"
+    tools:context="messenger.people.messenger.view.AboutActivity"
     android:background="@android:color/white">
 
     <include layout="@layout/toolbar"
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/logo"/>
+            android:src="@drawable/logo6"/>
 
         <TextView
             android:id="@+id/messenger_title"
