--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -9,5 +9,6 @@
         android:title="Rate"/>
     <item android:id="@+id/about"
         android:title="About"/>
-
+    <item android:id="@+id/settings"
+        android:title="Settings"/>
 </menu>
