--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -44,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:orientation="vertical"
+                    android:visibility="visible"
                     app:shimmer_duration="800">
 
                     <!-- Adding 7 rows of placeholders -->
@@ -62,9 +63,23 @@
 
                 </com.facebook.shimmer.ShimmerFrameLayout>
 
+                <EditText
+                    android:id="@+id/googleEt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Search Google"
+                    android:drawableLeft="@drawable/googlesmall"
+                    android:drawablePadding="10dp"
+                    android:padding="15dp"
+                    android:imeOptions="actionDone"
+                    android:singleLine="true"
+                    android:background="@drawable/rounded_cornor_edittext"
+                    android:paddingLeft="10dp"/>
+
                 <LinearLayout
                     android:id="@+id/segment_three"
                     android:layout_width="match_parent"
+                    android:layout_marginTop="20dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_border"
                     android:visibility="gone"
@@ -151,14 +166,14 @@
                             android:id="@+id/message"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:padding="10dp"
+                            android:padding="15dp"
                             android:background="@drawable/rounded_border"
                             android:clickable="true"
                             android:layout_weight="1">
 
                             <ImageView
-                                android:layout_width="50dp"
-                                android:layout_height="50dp"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
                                 android:src="@drawable/message"/>
 
                             <TextView
@@ -175,6 +190,76 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/segment_two"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:background="@drawable/rounded_border"
+                    android:visibility="gone"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp">
+                        <View
+                            android:id="@+id/blue_sec_1"
+                            android:layout_centerVertical="true"
+                            android:layout_width="8dp"
+                            android:layout_height="40dp"
+                            android:background="@drawable/rounded_corner"/>
+
+                        <LinearLayout
+                            android:layout_centerVertical="true"
+                            android:layout_toRightOf="@id/blue_sec_1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="20dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Explore"
+                                android:textStyle="bold"
+                                android:textColor="@android:color/black"
+                                />
+
+                            <TextView
+                                android:layout_marginTop="4dp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="No Installation Required"/>
+
+                        </LinearLayout>
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height=".5dp"
+                        android:background="#D3D3D3"/>
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/app_container_1"
+                        android:layout_width="match_parent"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
+
+                <com.google.android.gms.ads.AdView
+                    xmlns:ads="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/adView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    ads:adSize="SMART_BANNER"
+                    android:visibility="gone"
+                    ads:adUnitId="ca-app-pub-5550326882103592/7492881365">
+                </com.google.android.gms.ads.AdView>
 
                 <LinearLayout
                     android:id="@+id/segment_one"
@@ -250,76 +335,6 @@
 
                 <com.google.android.gms.ads.AdView
                     xmlns:ads="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/adView1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    ads:adSize="SMART_BANNER"
-                    android:visibility="visible"
-                    ads:adUnitId="ca-app-pub-5550326882103592/7492881365">
-                </com.google.android.gms.ads.AdView>
-
-                <LinearLayout
-                    android:id="@+id/segment_two"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:background="@drawable/rounded_border"
-                    android:visibility="gone"
-                    android:orientation="vertical">
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp">
-                        <View
-                            android:id="@+id/blue_sec_1"
-                            android:layout_centerVertical="true"
-                            android:layout_width="8dp"
-                            android:layout_height="40dp"
-                            android:background="@drawable/rounded_corner"/>
-
-                        <LinearLayout
-                            android:layout_centerVertical="true"
-                            android:layout_toRightOf="@id/blue_sec_1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="20dp"
-                            android:orientation="vertical">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Explore"
-                                android:textStyle="bold"
-                                android:textColor="@android:color/black"
-                                />
-
-                            <TextView
-                                android:layout_marginTop="4dp"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="No Installation Required"/>
-
-                        </LinearLayout>
-
-                    </RelativeLayout>
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height=".5dp"
-                        android:background="#D3D3D3"/>
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/app_container_1"
-                        android:layout_width="match_parent"
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp"
-                        android:layout_height="wrap_content" />
-
-                </LinearLayout>
-
-                <com.google.android.gms.ads.AdView
-                    xmlns:ads="http://schemas.android.com/apk/res-auto"
                     android:id="@+id/adView2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -344,7 +359,7 @@
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             ads:adSize="SMART_BANNER"
-            ads:adUnitId="ca-app-pub-5550326882103592/8838850108">
+            ads:adUnitId="ca-app-pub-5550326882103592/7087676353">
         </com.google.android.gms.ads.AdView>
 
     </RelativeLayout>
