--- a/app/src/main/res/layout/activity_usage_stats.xml
+++ b/app/src/main/res/layout/activity_usage_stats.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.UsageStatsActivity">
+    tools:context="messenger.people.messenger.view.UsageStatsActivity">
 
     <include layout="@layout/toolbar"
         android:id="@+id/toolbarUsage"
