--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,43 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
     tools:context="messenger.people.messenger.view.SplashActivity">
 
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerInParent="true"
+        android:elevation="2dp"
+        android:src="@drawable/logo6"/>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:layout_centerVertical="true"
+        android:layout_centerInParent="true"
         android:src="@drawable/splash"/>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="gone"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/messenger"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:src="@drawable/logo"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Messenger"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:textSize="30dp"
-            android:layout_marginTop="-30dp"
-            android:layout_gravity="center_horizontal"
-            android:textColor="#0076FE"/>
-    </LinearLayout>
-
-
-
 </RelativeLayout>
